2002-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* toplev.cc (octave_initialized): New global variable.
	(main_loop): Set it to true here.
	* sighandlers.cc (sigint_handler): Exit immediately if we have not
	finished init process.

	* load-save.cc (extract_keyword): Return std::string, not char *.
	Change all uses.
	(read_ascii_data): Likewise.
	(read_binary_data): Likewise.
	(read_hdf5_data): Likewise.
	(read_mat_ascii_data): Likewise.
	(read_mat_binary_data): Likewise.
	(do_load): Name and doc are now std::string objects, not char *.
	(install_loaded_variable): Likewise.
	(read_hdf5_data): Doc is now std::string object, not char *&.
	(read_mat_ascii_data): Call OCTAVE_QUIT in strategic locations.
	(get_lines_and_columns): Likewise.

	* toplev.cc (main_loop): Call OCTAVE_QUIT after executing command.
	* parse.y (parse_and_execute (FILE *)): Likewise.

2002-11-12  Joseph P. Skudlarek  <jskud@jskud.com>

	* input.cc (match_sans_spaces_semi): Rename from match_sans_spaces.
	Ignore trailing semicolons too.  Change all callers.

2002-11-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.gperf: Allow "persistent" as a synonym for static.

	* defun-int.h (DEFUN_MAPPER_INTERNAL): Don't forget doc string
	when creating octave_mapper object.

	* sysdep.cc (BSD_init): Avoid failure if FP_X_DNML is not defined.

2002-11-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* cutils.c: Be sure to always return buf.

	Undo previous vnprintf changes.  The portable snprintf I found
	does not handle floating point conversions...
	
2002-11-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (liboctinterp.$(LIBEXT)): Include $(XERBLA) here.
	(octave.$(EXEEXT)): Not here.
	(liboctinterp.$(SHLEXT)): Include $(PIC_XERBLA) here.

	* main.c: Move decl for xerbla here from octave.cc.

	* cutils.c (octave_vsnprintf): Use portable_snprintf to avoid
	having to cope with all kinds of buggy implementations.

	* snprintf.c: New file.
	* Makefile.in (DISTFILES): Add it to the list.
