@@ -136,7 +136,7 @@ tree_breakpoint::visit_binary_expression (tree_binary_expression& expr)
 }
 
 void 
-tree_breakpoint::visit_break_command (tree_break_command& cmd)
+tree_breakpoint::visit_break_expression (tree_break_expression& cmd)
 {
   if (found)
     return;
@@ -171,7 +171,7 @@ tree_breakpoint::visit_colon_expression (tree_colon_expression& expr)
 }
 
 void 
-tree_breakpoint::visit_continue_command (tree_continue_command& cmd)
+tree_breakpoint::visit_continue_expression (tree_continue_expression& cmd)
 {
   if (found)
     return;
@@ -510,7 +510,7 @@ tree_breakpoint::visit_prefix_expression (tree_prefix_expression& expr)
 }
 
 void 
-tree_breakpoint::visit_return_command (tree_return_command& cmd)
+tree_breakpoint::visit_return_expression (tree_return_expression& cmd)
 {
   if (found)
     return;
