@@ -29,21 +29,25 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 class tree_walker;
 
-#include "pt-cmd.h"
+#include "pt-exp.h"
 
 // Break.
 
 class
-tree_break_command : public tree_command
+tree_break_expression : public tree_expression
 {
 public:
 
-  tree_break_command (int l = -1, int c = -1)
-    : tree_command (l, c) { }
+  tree_break_expression (int l = -1, int c = -1)
+    : tree_expression (l, c) { }
 
-  ~tree_break_command (void) { }
+  ~tree_break_expression (void) { }
 
-  void eval (void);
+  bool rvalue_ok (void) { return true; }
+
+  octave_value rvalue (void);
+
+  octave_value_list rvalue (int nargout) { return rvalue (); }
 
   void accept (tree_walker& tw);
 
@@ -53,24 +57,28 @@ private:
 
   // No copying!
 
-  tree_break_command (const tree_break_command&);
+  tree_break_expression (const tree_break_expression&);
 
-  tree_break_command& operator = (const tree_break_command&);
+  tree_break_expression& operator = (const tree_break_expression&);
 };
 
 // Continue.
 
 class
-tree_continue_command : public tree_command
+tree_continue_expression : public tree_expression
 {
 public:
 
-  tree_continue_command (int l = -1, int c = -1)
-    : tree_command (l, c) { }
+  tree_continue_expression (int l = -1, int c = -1)
+    : tree_expression (l, c) { }
 
-  ~tree_continue_command (void) { }
+  ~tree_continue_expression (void) { }
 
-  void eval (void);
+  bool rvalue_ok (void) { return true; }
+
+  octave_value rvalue (void);
+
+  octave_value_list rvalue (int nargout) { return rvalue (); }
 
   void accept (tree_walker& tw);
 
@@ -80,24 +88,28 @@ private:
 
   // No copying!
 
-  tree_continue_command (const tree_continue_command&);
+  tree_continue_expression (const tree_continue_expression&);
 
-  tree_continue_command& operator = (const tree_continue_command&);
+  tree_continue_expression& operator = (const tree_continue_expression&);
 };
 
 // Return.
 
 class
-tree_return_command : public tree_command
+tree_return_expression : public tree_expression
 {
 public:
 
-  tree_return_command (int l = -1, int c = -1)
-    : tree_command (l, c) { }
+  tree_return_expression (int l = -1, int c = -1)
+    : tree_expression (l, c) { }
 
-  ~tree_return_command (void) { }
+  ~tree_return_expression (void) { }
 
-  void eval (void);
+  bool rvalue_ok (void) { return true; }
+
+  octave_value rvalue (void);
+
+  octave_value_list rvalue (int nargout) { return rvalue (); }
 
   void accept (tree_walker& tw);
 
@@ -107,9 +119,9 @@ private:
 
   // No copying!
 
-  tree_return_command (const tree_return_command&);
+  tree_return_expression (const tree_return_expression&);
 
-  tree_return_command& operator = (const tree_return_command&);
+  tree_return_expression& operator = (const tree_return_expression&);
 };
 
 #endif
