@@ -165,11 +165,11 @@ tree_statement_list::eval (bool silent, int nargout)
 	  if (error_state)
 	    break;
 
-	  if (tree_break_command::breaking
-	      || tree_continue_command::continuing)
+	  if (tree_break_expression::breaking
+	      || tree_continue_expression::continuing)
 	    break;
 
-	  if (tree_return_command::returning)
+	  if (tree_return_expression::returning)
 	    break;
 	}
       else
